Added twi library and turn on -Werror -Wall and -Wmissing-prototypes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,11 @@ SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb3")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmcu=$ENV{DEVICE} -DF_CPU=$ENV{FREQ}" )
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmcu=$ENV{DEVICE} -DF_CPU=$ENV{FREQ} -Os -Werror -Wall -Wmissing-prototypes" )
 
 add_library(uart STATIC src/uart.c)
+add_library(twi STATIC src/twi.c)
 
 add_executable(main test/main.c)
-target_link_libraries(main uart)
+target_link_libraries(main uart twi)
 
