--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmcu=$ENV{DEVICE} -DF_CPU=$ENV{FREQ} -Os -W
 add_library(uart STATIC src/uart.c)
 add_library(twi STATIC src/twi.c)
 
-add_executable(main test/main.c)
-target_link_libraries(main uart twi)
+#add_executable(main test/main.c)
+#target_link_libraries(main uart twi)
 
