--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb3")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmcu=$ENV{DEVICE} -DF_CPU=$ENV{FREQ} -Os -Werror -Wall -Wmissing-prototypes" )
 
+add_library(stdioconf STATIC src/stdioconf.c)
 add_library(uart STATIC src/uart.c)
 add_library(twi STATIC src/twi.c)
 
